--- a/ui/binding-jig.reel/binding-jig.css
+++ b/ui/binding-jig.reel/binding-jig.css
@@ -1,7 +1,7 @@
 .BindingJig {
     font-size: 12px;
     background: white;
-    margin: 6px 2px 6px 6px;
+    margin: 8px 6px 8px 8px;
     border-radius: 4px;
     box-shadow: 0 1px 3px hsla(0, 0%, 0%, 0.1);
 }
