--- a/ui/component-editor.reel/component-editor.css
+++ b/ui/component-editor.reel/component-editor.css
@@ -7,14 +7,10 @@
 
 .ComponentEditor-column {
     -webkit-flex: 1;
+    min-width: 0;
     display: -webkit-flex;
     -webkit-flex-direction: column;
     border-right: 1px solid hsl(0, 0%, 75%);
-}
-
-.ComponentEditor-column:nth-child(2) {
-    /* 2nd column (stage) is shrinkable */
-    min-width: 0;
 }
 
 .ComponentEditor-column-fill {
